parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> all
Rule 1     all -> BEGIN body END
Rule 2     body -> function
Rule 3     body -> body function
Rule 4     function -> FDEF prefix args { compound }
Rule 5     function -> FDEF prefix args { let_block compound }
Rule 6     args -> ( )
Rule 7     args -> ( pattern_list )
Rule 8     prefix -> ID
Rule 9     prefix -> | SPECIALID |
Rule 10    let_block -> LET { let_cont }
Rule 11    let_cont -> assign
Rule 12    let_cont -> let_cont , assign
Rule 13    assign -> lpattern = compound
Rule 14    lpattern -> lvar
Rule 15    lpattern -> llist
Rule 16    lpattern -> ltuple
Rule 17    llist -> [ ]
Rule 18    llist -> [ pattern_list ]
Rule 19    llist -> [ lpattern | lpattern ]
Rule 20    pattern_list -> lpattern
Rule 21    pattern_list -> pattern_list , lpattern
Rule 22    ltuple -> ( )
Rule 23    ltuple -> ( ltuple_cont )
Rule 24    ltuple_cont -> lpattern , lpattern
Rule 25    ltuple_cont -> ltuple_cont , lpattern
Rule 26    lvar -> ID
Rule 27    lvar -> | SPECIALID |
Rule 28    lvar -> STRING
Rule 29    lvar -> NUM
Rule 30    lvar -> CHAR
Rule 31    lvar -> BOOL
Rule 32    lvar -> ( lpattern )
Rule 33    compound -> expression
Rule 34    compound -> compound infix expression
Rule 35    compound -> ( infix expression )
Rule 36    compound -> ( expression infix )
Rule 37    infix -> ` ID `
Rule 38    infix -> SPECIALID
Rule 39    expression -> multivar
Rule 40    expression -> lambda
Rule 41    expression -> conditional
Rule 42    lambda -> FDEF ( ) { expression }
Rule 43    lambda -> FDEF ( pattern_list ) { expression }
Rule 44    conditional -> COND { cond , ELSE : expression }
Rule 45    conditional -> IF expression THEN expression ELSE expression
Rule 46    cond -> cond_singl
Rule 47    cond -> cond , cond_singl
Rule 48    cond_singl -> expression : expression
Rule 49    multivar -> primaryvar
Rule 50    multivar -> rlist
Rule 51    multivar -> rtuple
Rule 52    multivar -> multivar ( exp_list )
Rule 53    primaryvar -> ID
Rule 54    primaryvar -> | SPECIALID |
Rule 55    primaryvar -> STRING
Rule 56    primaryvar -> NUM
Rule 57    primaryvar -> CHAR
Rule 58    primaryvar -> BOOL
Rule 59    primaryvar -> ( expression )
Rule 60    rtuple -> ( )
Rule 61    rtuple -> ( rtuple_cont )
Rule 62    rtuple_cont -> expression , expression
Rule 63    rtuple_cont -> rtuple_cont , expression
Rule 64    rlist -> [ ]
Rule 65    rlist -> [ exp_list ]
Rule 66    rlist -> [ expression | expression ]
Rule 67    rlist -> [ expression RANGER expression ]
Rule 68    exp_list -> expression
Rule 69    exp_list -> exp_list , expression

Terminals, with rules where they appear

(                    : 6 7 22 23 32 35 36 42 43 52 59 60 61
)                    : 6 7 22 23 32 35 36 42 43 52 59 60 61
,                    : 12 21 24 25 44 47 62 63 69
:                    : 44 48
=                    : 13
BEGIN                : 1
BOOL                 : 31 58
CHAR                 : 30 57
COND                 : 44
ELSE                 : 44 45
END                  : 1
FDEF                 : 4 5 42 43
ID                   : 8 26 37 53
IF                   : 45
LET                  : 10
NUM                  : 29 56
RANGER               : 67
SPECIALID            : 9 27 38 54
STRING               : 28 55
THEN                 : 45
[                    : 17 18 19 64 65 66 67
]                    : 17 18 19 64 65 66 67
`                    : 37 37
error                : 
{                    : 4 5 10 42 43 44
|                    : 9 9 19 27 27 54 54 66
}                    : 4 5 10 42 43 44

Nonterminals, with rules where they appear

all                  : 0
args                 : 4 5
assign               : 11 12
body                 : 1 3
compound             : 4 5 13 34
cond                 : 44 47
cond_singl           : 46 47
conditional          : 41
exp_list             : 52 65 69
expression           : 33 34 35 36 42 43 44 45 45 45 48 48 59 62 62 63 66 66 67 67 68 69
function             : 2 3
infix                : 34 35 36
lambda               : 40
let_block            : 5
let_cont             : 10 12
llist                : 15
lpattern             : 13 19 19 20 21 24 24 25 32
ltuple               : 16
ltuple_cont          : 23 25
lvar                 : 14
multivar             : 39 52
pattern_list         : 7 18 21 43
prefix               : 4 5
primaryvar           : 49
rlist                : 50
rtuple               : 51
rtuple_cont          : 61 63

Parsing method: LALR

state 0

    (0) S' -> . all
    (1) all -> . BEGIN body END

    BEGIN           shift and go to state 2

    all                            shift and go to state 1

state 1

    (0) S' -> all .



state 2

    (1) all -> BEGIN . body END
    (2) body -> . function
    (3) body -> . body function
    (4) function -> . FDEF prefix args { compound }
    (5) function -> . FDEF prefix args { let_block compound }

    FDEF            shift and go to state 5

    body                           shift and go to state 3
    function                       shift and go to state 4

state 3

    (1) all -> BEGIN body . END
    (3) body -> body . function
    (4) function -> . FDEF prefix args { compound }
    (5) function -> . FDEF prefix args { let_block compound }

    END             shift and go to state 6
    FDEF            shift and go to state 5

    function                       shift and go to state 7

state 4

    (2) body -> function .

    END             reduce using rule 2 (body -> function .)
    FDEF            reduce using rule 2 (body -> function .)


state 5

    (4) function -> FDEF . prefix args { compound }
    (5) function -> FDEF . prefix args { let_block compound }
    (8) prefix -> . ID
    (9) prefix -> . | SPECIALID |

    ID              shift and go to state 9
    |               shift and go to state 10

    prefix                         shift and go to state 8

state 6

    (1) all -> BEGIN body END .

    $end            reduce using rule 1 (all -> BEGIN body END .)


state 7

    (3) body -> body function .

    END             reduce using rule 3 (body -> body function .)
    FDEF            reduce using rule 3 (body -> body function .)


state 8

    (4) function -> FDEF prefix . args { compound }
    (5) function -> FDEF prefix . args { let_block compound }
    (6) args -> . ( )
    (7) args -> . ( pattern_list )

    (               shift and go to state 12

    args                           shift and go to state 11

state 9

    (8) prefix -> ID .

    (               reduce using rule 8 (prefix -> ID .)


state 10

    (9) prefix -> | . SPECIALID |

    SPECIALID       shift and go to state 13


state 11

    (4) function -> FDEF prefix args . { compound }
    (5) function -> FDEF prefix args . { let_block compound }

    {               shift and go to state 14


state 12

    (6) args -> ( . )
    (7) args -> ( . pattern_list )
    (20) pattern_list -> . lpattern
    (21) pattern_list -> . pattern_list , lpattern
    (14) lpattern -> . lvar
    (15) lpattern -> . llist
    (16) lpattern -> . ltuple
    (26) lvar -> . ID
    (27) lvar -> . | SPECIALID |
    (28) lvar -> . STRING
    (29) lvar -> . NUM
    (30) lvar -> . CHAR
    (31) lvar -> . BOOL
    (32) lvar -> . ( lpattern )
    (17) llist -> . [ ]
    (18) llist -> . [ pattern_list ]
    (19) llist -> . [ lpattern | lpattern ]
    (22) ltuple -> . ( )
    (23) ltuple -> . ( ltuple_cont )

    )               shift and go to state 16
    ID              shift and go to state 22
    |               shift and go to state 23
    STRING          shift and go to state 24
    NUM             shift and go to state 25
    CHAR            shift and go to state 26
    BOOL            shift and go to state 27
    (               shift and go to state 15
    [               shift and go to state 28

    pattern_list                   shift and go to state 17
    lpattern                       shift and go to state 18
    lvar                           shift and go to state 19
    llist                          shift and go to state 20
    ltuple                         shift and go to state 21

state 13

    (9) prefix -> | SPECIALID . |

    |               shift and go to state 29


state 14

    (4) function -> FDEF prefix args { . compound }
    (5) function -> FDEF prefix args { . let_block compound }
    (33) compound -> . expression
    (34) compound -> . compound infix expression
    (35) compound -> . ( infix expression )
    (36) compound -> . ( expression infix )
    (10) let_block -> . LET { let_cont }
    (39) expression -> . multivar
    (40) expression -> . lambda
    (41) expression -> . conditional
    (49) multivar -> . primaryvar
    (50) multivar -> . rlist
    (51) multivar -> . rtuple
    (52) multivar -> . multivar ( exp_list )
    (42) lambda -> . FDEF ( ) { expression }
    (43) lambda -> . FDEF ( pattern_list ) { expression }
    (44) conditional -> . COND { cond , ELSE : expression }
    (45) conditional -> . IF expression THEN expression ELSE expression
    (53) primaryvar -> . ID
    (54) primaryvar -> . | SPECIALID |
    (55) primaryvar -> . STRING
    (56) primaryvar -> . NUM
    (57) primaryvar -> . CHAR
    (58) primaryvar -> . BOOL
    (59) primaryvar -> . ( expression )
    (64) rlist -> . [ ]
    (65) rlist -> . [ exp_list ]
    (66) rlist -> . [ expression | expression ]
    (67) rlist -> . [ expression RANGER expression ]
    (60) rtuple -> . ( )
    (61) rtuple -> . ( rtuple_cont )

    (               shift and go to state 34
    LET             shift and go to state 35
    FDEF            shift and go to state 30
    COND            shift and go to state 42
    IF              shift and go to state 43
    ID              shift and go to state 44
    |               shift and go to state 45
    STRING          shift and go to state 46
    NUM             shift and go to state 47
    CHAR            shift and go to state 48
    BOOL            shift and go to state 49
    [               shift and go to state 50

    compound                       shift and go to state 31
    let_block                      shift and go to state 32
    expression                     shift and go to state 33
    multivar                       shift and go to state 36
    lambda                         shift and go to state 37
    conditional                    shift and go to state 38
    primaryvar                     shift and go to state 39
    rlist                          shift and go to state 40
    rtuple                         shift and go to state 41

state 15

    (32) lvar -> ( . lpattern )
    (22) ltuple -> ( . )
    (23) ltuple -> ( . ltuple_cont )
    (14) lpattern -> . lvar
    (15) lpattern -> . llist
    (16) lpattern -> . ltuple
    (24) ltuple_cont -> . lpattern , lpattern
    (25) ltuple_cont -> . ltuple_cont , lpattern
    (26) lvar -> . ID
    (27) lvar -> . | SPECIALID |
    (28) lvar -> . STRING
    (29) lvar -> . NUM
    (30) lvar -> . CHAR
    (31) lvar -> . BOOL
    (32) lvar -> . ( lpattern )
    (17) llist -> . [ ]
    (18) llist -> . [ pattern_list ]
    (19) llist -> . [ lpattern | lpattern ]
    (22) ltuple -> . ( )
    (23) ltuple -> . ( ltuple_cont )

    )               shift and go to state 52
    ID              shift and go to state 22
    |               shift and go to state 23
    STRING          shift and go to state 24
    NUM             shift and go to state 25
    CHAR            shift and go to state 26
    BOOL            shift and go to state 27
    (               shift and go to state 15
    [               shift and go to state 28

    lpattern                       shift and go to state 51
    ltuple_cont                    shift and go to state 53
    lvar                           shift and go to state 19
    llist                          shift and go to state 20
    ltuple                         shift and go to state 21

state 16

    (6) args -> ( ) .

    {               reduce using rule 6 (args -> ( ) .)


state 17

    (7) args -> ( pattern_list . )
    (21) pattern_list -> pattern_list . , lpattern

    )               shift and go to state 54
    ,               shift and go to state 55


state 18

    (20) pattern_list -> lpattern .

    )               reduce using rule 20 (pattern_list -> lpattern .)
    ,               reduce using rule 20 (pattern_list -> lpattern .)


state 19

    (14) lpattern -> lvar .

    )               reduce using rule 14 (lpattern -> lvar .)
    ,               reduce using rule 14 (lpattern -> lvar .)
    |               reduce using rule 14 (lpattern -> lvar .)
    ]               reduce using rule 14 (lpattern -> lvar .)
    =               reduce using rule 14 (lpattern -> lvar .)


state 20

    (15) lpattern -> llist .

    )               reduce using rule 15 (lpattern -> llist .)
    ,               reduce using rule 15 (lpattern -> llist .)
    |               reduce using rule 15 (lpattern -> llist .)
    ]               reduce using rule 15 (lpattern -> llist .)
    =               reduce using rule 15 (lpattern -> llist .)


state 21

    (16) lpattern -> ltuple .

    )               reduce using rule 16 (lpattern -> ltuple .)
    ,               reduce using rule 16 (lpattern -> ltuple .)
    |               reduce using rule 16 (lpattern -> ltuple .)
    ]               reduce using rule 16 (lpattern -> ltuple .)
    =               reduce using rule 16 (lpattern -> ltuple .)


state 22

    (26) lvar -> ID .

    )               reduce using rule 26 (lvar -> ID .)
    ,               reduce using rule 26 (lvar -> ID .)
    |               reduce using rule 26 (lvar -> ID .)
    ]               reduce using rule 26 (lvar -> ID .)
    =               reduce using rule 26 (lvar -> ID .)


state 23

    (27) lvar -> | . SPECIALID |

    SPECIALID       shift and go to state 56


state 24

    (28) lvar -> STRING .

    )               reduce using rule 28 (lvar -> STRING .)
    ,               reduce using rule 28 (lvar -> STRING .)
    |               reduce using rule 28 (lvar -> STRING .)
    ]               reduce using rule 28 (lvar -> STRING .)
    =               reduce using rule 28 (lvar -> STRING .)


state 25

    (29) lvar -> NUM .

    )               reduce using rule 29 (lvar -> NUM .)
    ,               reduce using rule 29 (lvar -> NUM .)
    |               reduce using rule 29 (lvar -> NUM .)
    ]               reduce using rule 29 (lvar -> NUM .)
    =               reduce using rule 29 (lvar -> NUM .)


state 26

    (30) lvar -> CHAR .

    )               reduce using rule 30 (lvar -> CHAR .)
    ,               reduce using rule 30 (lvar -> CHAR .)
    |               reduce using rule 30 (lvar -> CHAR .)
    ]               reduce using rule 30 (lvar -> CHAR .)
    =               reduce using rule 30 (lvar -> CHAR .)


state 27

    (31) lvar -> BOOL .

    )               reduce using rule 31 (lvar -> BOOL .)
    ,               reduce using rule 31 (lvar -> BOOL .)
    |               reduce using rule 31 (lvar -> BOOL .)
    ]               reduce using rule 31 (lvar -> BOOL .)
    =               reduce using rule 31 (lvar -> BOOL .)


state 28

    (17) llist -> [ . ]
    (18) llist -> [ . pattern_list ]
    (19) llist -> [ . lpattern | lpattern ]
    (20) pattern_list -> . lpattern
    (21) pattern_list -> . pattern_list , lpattern
    (14) lpattern -> . lvar
    (15) lpattern -> . llist
    (16) lpattern -> . ltuple
    (26) lvar -> . ID
    (27) lvar -> . | SPECIALID |
    (28) lvar -> . STRING
    (29) lvar -> . NUM
    (30) lvar -> . CHAR
    (31) lvar -> . BOOL
    (32) lvar -> . ( lpattern )
    (17) llist -> . [ ]
    (18) llist -> . [ pattern_list ]
    (19) llist -> . [ lpattern | lpattern ]
    (22) ltuple -> . ( )
    (23) ltuple -> . ( ltuple_cont )

    ]               shift and go to state 57
    ID              shift and go to state 22
    |               shift and go to state 23
    STRING          shift and go to state 24
    NUM             shift and go to state 25
    CHAR            shift and go to state 26
    BOOL            shift and go to state 27
    (               shift and go to state 15
    [               shift and go to state 28

    pattern_list                   shift and go to state 58
    lpattern                       shift and go to state 59
    lvar                           shift and go to state 19
    llist                          shift and go to state 20
    ltuple                         shift and go to state 21

state 29

    (9) prefix -> | SPECIALID | .

    (               reduce using rule 9 (prefix -> | SPECIALID | .)


state 30

    (42) lambda -> FDEF . ( ) { expression }
    (43) lambda -> FDEF . ( pattern_list ) { expression }

    (               shift and go to state 60


state 31

    (4) function -> FDEF prefix args { compound . }
    (34) compound -> compound . infix expression
    (37) infix -> . ` ID `
    (38) infix -> . SPECIALID

    }               shift and go to state 61
    `               shift and go to state 63
    SPECIALID       shift and go to state 64

    infix                          shift and go to state 62

state 32

    (5) function -> FDEF prefix args { let_block . compound }
    (33) compound -> . expression
    (34) compound -> . compound infix expression
    (35) compound -> . ( infix expression )
    (36) compound -> . ( expression infix )
    (39) expression -> . multivar
    (40) expression -> . lambda
    (41) expression -> . conditional
    (49) multivar -> . primaryvar
    (50) multivar -> . rlist
    (51) multivar -> . rtuple
    (52) multivar -> . multivar ( exp_list )
    (42) lambda -> . FDEF ( ) { expression }
    (43) lambda -> . FDEF ( pattern_list ) { expression }
    (44) conditional -> . COND { cond , ELSE : expression }
    (45) conditional -> . IF expression THEN expression ELSE expression
    (53) primaryvar -> . ID
    (54) primaryvar -> . | SPECIALID |
    (55) primaryvar -> . STRING
    (56) primaryvar -> . NUM
    (57) primaryvar -> . CHAR
    (58) primaryvar -> . BOOL
    (59) primaryvar -> . ( expression )
    (64) rlist -> . [ ]
    (65) rlist -> . [ exp_list ]
    (66) rlist -> . [ expression | expression ]
    (67) rlist -> . [ expression RANGER expression ]
    (60) rtuple -> . ( )
    (61) rtuple -> . ( rtuple_cont )

    (               shift and go to state 34
    FDEF            shift and go to state 30
    COND            shift and go to state 42
    IF              shift and go to state 43
    ID              shift and go to state 44
    |               shift and go to state 45
    STRING          shift and go to state 46
    NUM             shift and go to state 47
    CHAR            shift and go to state 48
    BOOL            shift and go to state 49
    [               shift and go to state 50

    compound                       shift and go to state 65
    expression                     shift and go to state 33
    multivar                       shift and go to state 36
    lambda                         shift and go to state 37
    conditional                    shift and go to state 38
    primaryvar                     shift and go to state 39
    rlist                          shift and go to state 40
    rtuple                         shift and go to state 41

state 33

    (33) compound -> expression .

    }               reduce using rule 33 (compound -> expression .)
    `               reduce using rule 33 (compound -> expression .)
    SPECIALID       reduce using rule 33 (compound -> expression .)
    ,               reduce using rule 33 (compound -> expression .)


state 34

    (35) compound -> ( . infix expression )
    (36) compound -> ( . expression infix )
    (59) primaryvar -> ( . expression )
    (60) rtuple -> ( . )
    (61) rtuple -> ( . rtuple_cont )
    (37) infix -> . ` ID `
    (38) infix -> . SPECIALID
    (39) expression -> . multivar
    (40) expression -> . lambda
    (41) expression -> . conditional
    (62) rtuple_cont -> . expression , expression
    (63) rtuple_cont -> . rtuple_cont , expression
    (49) multivar -> . primaryvar
    (50) multivar -> . rlist
    (51) multivar -> . rtuple
    (52) multivar -> . multivar ( exp_list )
    (42) lambda -> . FDEF ( ) { expression }
    (43) lambda -> . FDEF ( pattern_list ) { expression }
    (44) conditional -> . COND { cond , ELSE : expression }
    (45) conditional -> . IF expression THEN expression ELSE expression
    (53) primaryvar -> . ID
    (54) primaryvar -> . | SPECIALID |
    (55) primaryvar -> . STRING
    (56) primaryvar -> . NUM
    (57) primaryvar -> . CHAR
    (58) primaryvar -> . BOOL
    (59) primaryvar -> . ( expression )
    (64) rlist -> . [ ]
    (65) rlist -> . [ exp_list ]
    (66) rlist -> . [ expression | expression ]
    (67) rlist -> . [ expression RANGER expression ]
    (60) rtuple -> . ( )
    (61) rtuple -> . ( rtuple_cont )

    )               shift and go to state 69
    `               shift and go to state 63
    SPECIALID       shift and go to state 64
    FDEF            shift and go to state 30
    COND            shift and go to state 42
    IF              shift and go to state 43
    ID              shift and go to state 44
    |               shift and go to state 45
    STRING          shift and go to state 46
    NUM             shift and go to state 47
    CHAR            shift and go to state 48
    BOOL            shift and go to state 49
    (               shift and go to state 66
    [               shift and go to state 50

    infix                          shift and go to state 67
    expression                     shift and go to state 68
    rtuple_cont                    shift and go to state 70
    multivar                       shift and go to state 36
    lambda                         shift and go to state 37
    conditional                    shift and go to state 38
    primaryvar                     shift and go to state 39
    rlist                          shift and go to state 40
    rtuple                         shift and go to state 41

state 35

    (10) let_block -> LET . { let_cont }

    {               shift and go to state 71


state 36

    (39) expression -> multivar .
    (52) multivar -> multivar . ( exp_list )

    }               reduce using rule 39 (expression -> multivar .)
    `               reduce using rule 39 (expression -> multivar .)
    SPECIALID       reduce using rule 39 (expression -> multivar .)
    )               reduce using rule 39 (expression -> multivar .)
    ,               reduce using rule 39 (expression -> multivar .)
    THEN            reduce using rule 39 (expression -> multivar .)
    |               reduce using rule 39 (expression -> multivar .)
    RANGER          reduce using rule 39 (expression -> multivar .)
    ]               reduce using rule 39 (expression -> multivar .)
    :               reduce using rule 39 (expression -> multivar .)
    ELSE            reduce using rule 39 (expression -> multivar .)
    (               shift and go to state 72


state 37

    (40) expression -> lambda .

    }               reduce using rule 40 (expression -> lambda .)
    `               reduce using rule 40 (expression -> lambda .)
    SPECIALID       reduce using rule 40 (expression -> lambda .)
    )               reduce using rule 40 (expression -> lambda .)
    ,               reduce using rule 40 (expression -> lambda .)
    THEN            reduce using rule 40 (expression -> lambda .)
    |               reduce using rule 40 (expression -> lambda .)
    RANGER          reduce using rule 40 (expression -> lambda .)
    ]               reduce using rule 40 (expression -> lambda .)
    :               reduce using rule 40 (expression -> lambda .)
    ELSE            reduce using rule 40 (expression -> lambda .)


state 38

    (41) expression -> conditional .

    }               reduce using rule 41 (expression -> conditional .)
    `               reduce using rule 41 (expression -> conditional .)
    SPECIALID       reduce using rule 41 (expression -> conditional .)
    )               reduce using rule 41 (expression -> conditional .)
    ,               reduce using rule 41 (expression -> conditional .)
    THEN            reduce using rule 41 (expression -> conditional .)
    |               reduce using rule 41 (expression -> conditional .)
    RANGER          reduce using rule 41 (expression -> conditional .)
    ]               reduce using rule 41 (expression -> conditional .)
    :               reduce using rule 41 (expression -> conditional .)
    ELSE            reduce using rule 41 (expression -> conditional .)


state 39

    (49) multivar -> primaryvar .

    (               reduce using rule 49 (multivar -> primaryvar .)
    }               reduce using rule 49 (multivar -> primaryvar .)
    `               reduce using rule 49 (multivar -> primaryvar .)
    SPECIALID       reduce using rule 49 (multivar -> primaryvar .)
    )               reduce using rule 49 (multivar -> primaryvar .)
    ,               reduce using rule 49 (multivar -> primaryvar .)
    THEN            reduce using rule 49 (multivar -> primaryvar .)
    |               reduce using rule 49 (multivar -> primaryvar .)
    RANGER          reduce using rule 49 (multivar -> primaryvar .)
    ]               reduce using rule 49 (multivar -> primaryvar .)
    :               reduce using rule 49 (multivar -> primaryvar .)
    ELSE            reduce using rule 49 (multivar -> primaryvar .)


state 40

    (50) multivar -> rlist .

    (               reduce using rule 50 (multivar -> rlist .)
    }               reduce using rule 50 (multivar -> rlist .)
    `               reduce using rule 50 (multivar -> rlist .)
    SPECIALID       reduce using rule 50 (multivar -> rlist .)
    )               reduce using rule 50 (multivar -> rlist .)
    ,               reduce using rule 50 (multivar -> rlist .)
    THEN            reduce using rule 50 (multivar -> rlist .)
    |               reduce using rule 50 (multivar -> rlist .)
    RANGER          reduce using rule 50 (multivar -> rlist .)
    ]               reduce using rule 50 (multivar -> rlist .)
    :               reduce using rule 50 (multivar -> rlist .)
    ELSE            reduce using rule 50 (multivar -> rlist .)


state 41

    (51) multivar -> rtuple .

    (               reduce using rule 51 (multivar -> rtuple .)
    }               reduce using rule 51 (multivar -> rtuple .)
    `               reduce using rule 51 (multivar -> rtuple .)
    SPECIALID       reduce using rule 51 (multivar -> rtuple .)
    )               reduce using rule 51 (multivar -> rtuple .)
    ,               reduce using rule 51 (multivar -> rtuple .)
    THEN            reduce using rule 51 (multivar -> rtuple .)
    |               reduce using rule 51 (multivar -> rtuple .)
    RANGER          reduce using rule 51 (multivar -> rtuple .)
    ]               reduce using rule 51 (multivar -> rtuple .)
    :               reduce using rule 51 (multivar -> rtuple .)
    ELSE            reduce using rule 51 (multivar -> rtuple .)


state 42

    (44) conditional -> COND . { cond , ELSE : expression }

    {               shift and go to state 73


state 43

    (45) conditional -> IF . expression THEN expression ELSE expression
    (39) expression -> . multivar
    (40) expression -> . lambda
    (41) expression -> . conditional
    (49) multivar -> . primaryvar
    (50) multivar -> . rlist
    (51) multivar -> . rtuple
    (52) multivar -> . multivar ( exp_list )
    (42) lambda -> . FDEF ( ) { expression }
    (43) lambda -> . FDEF ( pattern_list ) { expression }
    (44) conditional -> . COND { cond , ELSE : expression }
    (45) conditional -> . IF expression THEN expression ELSE expression
    (53) primaryvar -> . ID
    (54) primaryvar -> . | SPECIALID |
    (55) primaryvar -> . STRING
    (56) primaryvar -> . NUM
    (57) primaryvar -> . CHAR
    (58) primaryvar -> . BOOL
    (59) primaryvar -> . ( expression )
    (64) rlist -> . [ ]
    (65) rlist -> . [ exp_list ]
    (66) rlist -> . [ expression | expression ]
    (67) rlist -> . [ expression RANGER expression ]
    (60) rtuple -> . ( )
    (61) rtuple -> . ( rtuple_cont )

    FDEF            shift and go to state 30
    COND            shift and go to state 42
    IF              shift and go to state 43
    ID              shift and go to state 44
    |               shift and go to state 45
    STRING          shift and go to state 46
    NUM             shift and go to state 47
    CHAR            shift and go to state 48
    BOOL            shift and go to state 49
    (               shift and go to state 66
    [               shift and go to state 50

    expression                     shift and go to state 74
    multivar                       shift and go to state 36
    lambda                         shift and go to state 37
    conditional                    shift and go to state 38
    primaryvar                     shift and go to state 39
    rlist                          shift and go to state 40
    rtuple                         shift and go to state 41

state 44

    (53) primaryvar -> ID .

    (               reduce using rule 53 (primaryvar -> ID .)
    }               reduce using rule 53 (primaryvar -> ID .)
    `               reduce using rule 53 (primaryvar -> ID .)
    SPECIALID       reduce using rule 53 (primaryvar -> ID .)
    )               reduce using rule 53 (primaryvar -> ID .)
    ,               reduce using rule 53 (primaryvar -> ID .)
    THEN            reduce using rule 53 (primaryvar -> ID .)
    |               reduce using rule 53 (primaryvar -> ID .)
    RANGER          reduce using rule 53 (primaryvar -> ID .)
    ]               reduce using rule 53 (primaryvar -> ID .)
    :               reduce using rule 53 (primaryvar -> ID .)
    ELSE            reduce using rule 53 (primaryvar -> ID .)


state 45

    (54) primaryvar -> | . SPECIALID |

    SPECIALID       shift and go to state 75


state 46

    (55) primaryvar -> STRING .
